[project]
name = "flet2web"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Kessler (Dalker)", email = "dalker+dev@neveroptimal.org" }
]
dependencies = [
    "flet>=0.84.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
    "flet-desktop>=0.84.0",
    "flet-web>=0.84.0",
]

[tool.flet]
desktop_flavor = "light"    # Change to "full" to use flet-audio and flet-video
org = "org.neveroptimal"
product = "flet2web"
copyright = "Copyright (C) 2026 by Dalker"

[tool.flet.app]
path = "src"
